--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* App container */
+.App {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  background-color: #ecd5d5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Global styles for all elements */
+* {
+  background-color: #ffffff;
+  color: #221e1e;
+}
+
+/* Header */
+.header {
+  background-color: #c7d5e2;
+  color: hsl(0, 20%, 90%);
+  padding: 10px;
+  border-radius: 10px 10px 0 0;
+  font-size: 24px;
+}
+
+/* Input styles */
+input {
+  padding: 10px;
+  margin-right: 10px;
+  height: 40px;
+  background-color: #ffffff;
+  border: 2px;
+  border-color: #6a89cc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+/* Button styles */
+button {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #6a89cc;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+/* List styles */
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 10px;
+  background-color: #e2e6f0;
+  border-radius: 5px;
+}
+
+/* Table styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f8f8f8;
+}
+
+/* Footer styles */
+.footer {
+  text-align: right;
+  margin-top: 10px;
+  color: #6a89cc;
+  font-weight: bold;
+font-size: 18px;
 }
